Update backend MongoDB Atlas configuration
- Configure MongoDB Atlas connection for production
- Update .env.example with Atlas template
- Add .env files to .gitignore for security
- Backend now successfully connects to CardifyAI cluster
- Database: ecoterra-database ready for use

Features ready:
 MongoDB Atlas connected
 Express.js API server
 JWT authentication
 Socket.IO real-time
 Security middleware
 Rate limiting
 Firebase integration
 Azure Blob Storage

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,35 @@ yarn-error.log*
 
 # Local Netlify folder
 .netlify
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.staging
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+logs/
+*.log
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
