--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,9 +3,13 @@ PORT=3000
 NODE_ENV=development
 
 # Database
-MONGO_URI=mongodb://localhost:27017/ecoterra
-# For production use MongoDB Atlas:
-# MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/ecoterra
+MONGO_URI=mongodb+srv://username:password@your-cluster.mongodb.net/ecoterra-database?retryWrites=true&w=majority&appName=EcoterraApp
+DB_NAME=ecoterra-database
+DB_MAX_POOL_SIZE=10
+DB_MIN_POOL_SIZE=5
+
+# For local development use:
+# MONGO_URI=mongodb://localhost:27017/ecoterra-database
 
 # JWT Secret
 JWT_SECRET=your-super-secret-jwt-key-here-change-in-production
