EcoterraApp React Native - Complete Android Build Setup
 Android Build Configuration:
- Fixed Kotlin version compatibility (1.7.22)
- Downgraded AGP to 7.4.2 and Gradle to 7.6.3
- Resolved react-native-gesture-handler & screens compatibility
- Added dependency resolution strategies
- Successful Android build and APK installation

 App Features Implemented:
- Complete authentication flow (Login/Register)
- Redux store with auth state management
- Navigation setup with React Navigation
- API service integration ready for backend
- Custom components (Logo, Header, AuthInput)
- Assets and images integrated

 Screens Created:
- SplashScreen with logo and branding
- LoginScreen with JWT authentication
- RegisterScreen for user signup
- HomeScreen as main dashboard

 Technical Improvements:
- TypeScript configuration optimized
- Package.json updated with compatible versions
- Android build.gradle configurations
- Development setup documentation
- Environment files protection

 Security & Best Practices:
- Environment files added to .gitignore
- Sensitive data protection
- Proper error handling structure
- Clean code architecture

 Documentation:
- DEVELOPMENT_SETUP.md created
- Setup scripts for Android environment
- Component and service documentation

Ready for: Backend integration, feature development, and deployment!

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,33 @@ yarn-error.log
 
 # testing
 /coverage
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Logs
+logs/
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Firebase config (if contains sensitive data)
+# google-services.json
+# GoogleService-Info.plist
