--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,9 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Kotlin version configuration
+kotlin.code.style=official
+
+# Suppress compileSdk warning for AGP 7.4.2 with compileSdk 34
+android.suppressUnsupportedCompileSdk=34
