--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EcoterraApp",
+  "name": "ecoterra-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,11 +7,45 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-android": "cd android && ./gradlew assembleRelease",
+    "build-android-bundle": "cd android && ./gradlew bundleRelease",
+    "clean": "cd android && ./gradlew clean && cd ../ios && xcodebuild clean",
+    "metro-reset": "npx react-native start --reset-cache"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/messaging": "^18.5.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
+    "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.72.17"
+    "react-native": "0.72.17",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-picker": "^5.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-orientation-locker": "^1.5.0",
+    "react-native-permissions": "^3.10.1",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.22.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-message": "^2.1.6",
+    "react-native-vector-icons": "^10.0.2",
+    "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +55,7 @@
     "@react-native/metro-config": "^0.72.12",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
